[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/bullet2.png" type="Texture" id=1]
[ext_resource path="res://Items/Bullet.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12.5, 3 )

[node name="PlayerBullet" type="RigidBody2D"]
collision_layer = 0
collision_mask = 9
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2.5, -1 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -1 )
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="hit" from="." to="." method="_on_Bullet_hit"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
